unpackaged/main/default/objects/Approval__c/Approval__c.object-meta.xml
<CustomObject>
    <label>Approval</label>
    <nameField>
        <displayFormat>AP{000000}</displayFormat>
        <label>Approval</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>