unpackaged/main/default/objects/Approval__c/fields/ApprovalRequest__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRequest__c</fullName>
    <label>Approval Request</label>
    <referenceTo>ApprovalRequest__c</referenceTo>
    <relationshipLabel>Approvals</relationshipLabel>
    <relationshipName>Approvals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>