unpackaged/main/default/objects/Approval__c/fields/ApproverRole__c.field-meta.xml
<CustomField>
    <fullName>ApproverRole__c</fullName>
    <formula>Approver__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver Role</label>
    <type>Text</type>
</CustomField>