unpackaged/main/default/objects/Approval__c/fields/CloseComments__c.field-meta.xml
<CustomField>
    <fullName>CloseComments__c</fullName>
    <label>Close Comments</label>
    <type>TextArea</type>
</CustomField>