unpackaged/main/default/objects/Approval__c/fields/CloseDateTime__c.field-meta.xml
<CustomField>
    <fullName>CloseDateTime__c</fullName>
    <label>Close Date Time</label>
    <type>DateTime</type>
</CustomField>