unpackaged/main/default/objects/Approval__c/fields/MetadataTierName__c.field-meta.xml
<CustomField>
    <fullName>MetadataTierName__c</fullName>
    <description>The Label of the OpportunityApprovalSetting__mdt Custom Metadata record that was selected as per the logic contained within the WB_OpportunityApprovals Apex Class</description>
    <inlineHelpText>The Label of the OpportunityApprovalSetting__mdt Custom Metadata record that was selected as per the logic contained within the WB_OpportunityApprovals Apex Class</inlineHelpText>
    <label>Metadata Tier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>