unpackaged/main/default/objects/Approval__c/fields/QueueType__c.field-meta.xml
<CustomField>
    <fullName>QueueType__c</fullName>
    <label>Queue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
                <default>true</default>
                <label>Finance</label>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>